--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -125,6 +125,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -132,6 +135,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccessController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogoffController.cs" />
     <Compile Include="Controllers\RentController.cs" />
@@ -168,10 +172,12 @@
     <Compile Include="Modelo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RentTableViewModels\RentaTableViewModel.cs" />
     <Compile Include="Models\TableViewModels\VehicleTableViewModel.cs" />
+    <Compile Include="Models\TableViewModels\VehicleTableViewModel2.cs" />
     <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RentaDevolucion.cs">
+    <Compile Include="Renta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="TiposDecombustible.cs">
@@ -192,6 +198,9 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\20190623-JD-POWER-FIABILIDAD-DE-AUTOS-MARCAS-Y-MODELOS-2019-04.jpg" />
+    <Content Include="Content\Images\User-Avatar-Profile-Clip-Art-Transparent-PNG.png" />
+    <Content Include="Content\Images\User_icon_BLACK-01.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -247,11 +256,16 @@
     <Content Include="Views\Vehicle\ViewVehicles.cshtml" />
     <Content Include="Views\User\Userview.cshtml" />
     <Content Include="Views\Rent\RentView.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout3.cshtml" />
+    <Content Include="Views\Admin\AdminView.cshtml" />
+    <Content Include="Views\Shared\_Layout3.5.cshtml" />
+    <Content Include="Views\Admin\CarView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\RentTableViewModels\" />
     <Folder Include="Views\Default\" />
+    <Folder Include="Views\VehicleTableViewModel2\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
